src/objects/LeanData__Account_Search__c.object
<CustomObject>
    <fields>
        <fullName>LeanData__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Searches</relationshipLabel>
        <relationshipName>Account_Searches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeanData__Email_Domains__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Domains</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LeanData__Search__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <label>Search</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Account Search</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>